--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "better-sqlite3": "^12.6.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "better-sqlite3": "^9.4.3",
-    "mysql2": "^3.6.5",
-    "dotenv": "^16.3.1"
+    "mysql2": "^3.6.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
